Checking in current work on build process simplification.